--- a/Module - 3/Ingress/ingress.yaml
+++ b/Module - 3/Ingress/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-ingress
 spec:
   rules:
-  - host: kubernetesfederatedcluster.com
+  - host: kubops.akshatsreeya.online
     http:
       paths: 
       - path: /app1
